* Fix relative --src folder. Thanks Simon Cross.
* Handle missing VCS with an error message. Thanks Alexandre Conrad.
* Added --no-download option to install; pairs with --no-install to separate
  download and installation into two steps. Thanks Simon Cross.
* Fix uninstalling from requirements file containing -f, -i, or
  --extra-index-url.

0.6.3
-----

* Fixed import error on Windows with regard to the backwards compatibility
  package

0.6.2
-----

* Fixed uninstall when /tmp is on a different filesystem.

* Fixed uninstallation of distributions with namespace packages.

0.6.1
-----

* Added support for the ``https`` and ``http-static`` schemes to the
  Mercurial and ``ftp`` scheme to the Bazaar backend.

* Fixed uninstallation of scripts installed with easy_install.

* Fixed an issue in the package finder that could result in an
  infinite loop while looking for links.

* Fixed issue with ``pip bundle`` and local files (which weren't being
  copied into the bundle), from Whit Morriss.

0.6
---

* Add ``pip uninstall`` and uninstall-before upgrade (from Carl
  Meyer).

* Extended configurability with config files and environment variables.

* Allow packages to be upgraded, e.g., ``pip install Package==0.1``
  then ``pip install Package==0.2``.

* Allow installing/upgrading to Package==dev (fix "Source version does not
  match target version" errors).

* Added command and option completion for bash and zsh.

* Extended integration with virtualenv by providing an option to
  automatically use an active virtualenv and an option to warn if no active
  virtualenv is found.

* Fixed a bug with pip install --download and editable packages, where
  directories were being set with 0000 permissions, now defaults to 755.

* Fixed uninstallation of easy_installed console_scripts.

* Fixed uninstallation on Mac OS X Framework layout installs

* Fixed bug preventing uninstall of editables with source outside venv.

* Creates download cache directory if not existing.

0.5.1